# clean-python-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-dev.yaml  pyproject.toml
src/data/protocols/: add_account_repository.py  encrypter.py
src/data/usecases/add_account/: db_add_account.py  test_db_add_account.py
src/domain/models/: account.py
src/domain/usecases/: add_account.py
src/infra/criptography/: bcrypt_adapter.py  test_bcrypt_adapter.py
src/infra/db/mongodb/account_repository/: account.py  test_account.py
src/infra/db/mongodb/helpers/: mongo_helper.py
src/main/: server.py
src/main/config/: app.py  middlewares.py
src/main/middlewares/: content_type.py  test_content_type.py
src/presentation/controllers/signup/: signup.py  test_signup.py
src/presentation/controllers/signup/stub/: add_account_stub.py  email_validator_stub.py
src/presentation/errors/: invalid_param_error.py  missing_param_error.py  server_error.py
src/presentation/helpers/: http_helper.py
src/presentation/protocols/: controller.py  email_validator.py  http.py  interface.py
src/utils/: email_validator_adapter.py  test_email_validator_adapter.py
